--- a/src/blocks/room-information/room-information.pug
+++ b/src/blocks/room-information/room-information.pug
@@ -1,6 +1,6 @@
 mixin room-information(icon, quality, descr, className)
     div(class='room-information')
-      div(class='room-information__wrapper row' class= className)
+      div(class='room-information__wrapper' class= className)
          i(class='material-icons')= icon
          div(class='room-information__description')
             h4(class='room-information__quality')= quality
