--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -16,26 +16,42 @@
   }
   &__number {
     font-style: normal;
+    font-family: "Montserrat";
     font-weight: bold;
     font-size: 1.3rem;
     margin-top: 5px;
-    color: #1f2041;
+    color: #1F2041;
+  }
+  &__luxe{
+    font-style: normal;
+    font-family: "Montserrat";
+    font-weight: bold;
+    font-size: 1.3rem;
+    margin-top: 5px;
+    color: #BC9CFF;
   }
   &__price,
   &__feedback {
+    font-family: "Montserrat";
     font-style: normal;
     font-weight: bold;
     font-size: 1.16rem;
-    color: rgba(31, 32, 65, 0.5);
+    color: rgba(31, 32, 65, 0.75);
     padding-top: 10px;
     padding-bottom: 10px;
+  }
+  &__text{
+    color: rgba(31, 32, 65, 0.5);
   }
   &__line {
     border-bottom: 2px solid rgb(220, 220, 220);
   }
   &__per-day {
-    font-weight: normal;
-    font-size: 1rem;
+    font-family: "Montserrat";
+    font-size: 1.16rem;
+    font-weight: bold;
+    font-style: normal;
+    color: rgba(31, 32, 65, 0.5);
   }
 }
 
