--- a/src/blocks/calculator/calculator.pug
+++ b/src/blocks/calculator/calculator.pug
@@ -1,41 +1,41 @@
 include ../airdatepicker/airdatepicker.pug
-mixin calculator(roomNumber, pricePerDay, day, checkin, checkout, titleDropdown, calculationOfThePrice, fullPrice, tax, addTax, additionalTax, totalPrice, button )
+mixin calculator(roomNumber, pricePerDay, day, checkin, checkout, titleDropdown, calculationOfThePrice, fullPrice, tax, addTax, additionalTax, totalPrice)
     div(class='calculator')
         div(class='calculator__container')
-            div(class='flex-row')
+            div(class='calculator__wrapper')
                 p(class='calculator__text') 
                     span  &#8470;
                     span= roomNumber
                 p(class='calculator__text')= pricePerDay
                     span= day
-            div(class='row calculator__title_datepicker')
-                p(class='title')= checkin
-                p(class='title calculator__title_datepicker_checkout')= checkout
+            div(class='calculator__subtitles')
+                p(class='calculator__subtitle')= checkin
+                p(class='calculator__subtitle calculator__subtitle_checkout')= checkout
             div(class='calculator__datepicker')
                 +datepicker
-            p(class='title')= titleDropdown
+            p(class='calculator__subtitle')= titleDropdown
             div(class='calculator__dropdown')
                 +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
             div(class='calculator__price')
-                div(class='flex-row price__count')
+                div(class='calculator__count')
                     div
                         p(class='calculator__text')= calculationOfThePrice
                     div
                         p(class='calculator__text')= fullPrice
-            div(class='flex-row calculator__price')
-                div(class='row')
+            div(class='calculator__price')
+                div(class='calculator__wrap')
                     p(class='calculator__text')= tax
                     div
-                        span(class='price__info') i
+                        span(class='calculator__info') i
                 p(class='calculator__text') 0P
-            div(class='flex-row calculator__price')
-                div(class='row')
+            div(class='calculator__price')
+                div(class='calculator__wrap')
                     p(class='calculator__text')= addTax
                     div
-                        span(class='price__info price__info_extra') i
+                        span(class='calculator__info calculator__info_extra') i
                 p(class='calculator__text')= additionalTax
             h3(class='calculator__total-price')= totalPrice
-            button(type='button' class='btn btn__confirm')= button
+            +button('забронировать', '#', 'btn__confirm')
                 
 
 
