--- a/src/blocks/radio-button/radio-button.scss
+++ b/src/blocks/radio-button/radio-button.scss
@@ -4,7 +4,7 @@
     opacity: 0;
     + .radio__label {
       &:before {
-        content: "";
+        content: '';
         background: #fff;
         border-radius: 100%;
         border: 2px solid rgba(31, 32, 65, 0.25);
