--- a/src/components/form-register/form-register.pug
+++ b/src/components/form-register/form-register.pug
@@ -5,34 +5,35 @@ include ../../blocks/toggle/toggle.pug
 mixin form-register(title, birthday,  data, offer, login)
   div(class='signup')
     div(class='signup__container')
-        h1( class='title-main')= title
+        h1( class='signup__title')= title
         div(class='signup__input signup__input_name')
           +input-text('Имя')
         div(class='signup__input signup__input_surname')
           +input-text('Фамилия')
 
-        div(class="row signup__radio-buttons")
+        div(class="signup__radio-buttons")
           +radio-button('radio-button1', 'Мужчина')
           div(class="signup__radio-buttons_woman")
             +radio-button('radio-button2', 'Женщина')
 
-        div(class=' signup__input signup__input_birthday')
-          div(class='title signup__title')= birthday
+        div(class='signup__input signup__input_birthday')
+          div(class='signup__subtitle')= birthday
           +input-text('ДД.ММ.ГГГГ')
         
         div(class='signup__input signup__input_data')
-          div(class='title signup__title')= data
+          div(class='signup__subtitle')= data
           +input-text('Email')
 
         div(class='signup__input signup__input_data_password')
           +input-text('Пароль')
 
-        .row
+        div(class='signup__wrap')
           +toggle
           p(class='signup__offer')= offer
 
-        +button('перейти к оплате','#', 'btn__confirm signup__button_payment')
+        div(class='signup__button')
+          +button('перейти к оплате','#', 'btn__confirm')
 
-        .row
-          p(class='text signup__text')= login
+        div(class='signup__wrap')
+          p(class='signup__text')= login
           +button('Войти', 'signin-page.html', 'btn__signin')
