--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -10,9 +10,28 @@
     padding: 33px 30px 40px 40px;
   }
   &__title {
+    font-family: "OpenSans-Bold";
+    font-style: normal;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 1.89rem;
+  }
+  &__subtitle {
     padding-bottom: 7px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 17.8px;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: #1f2041;
+    letter-spacing: 0.2px;
+    margin-block-end: 0.1em;
+    margin-block-start: 0.1em;
+    margin-bottom: 5px;
   }
   &__radio-buttons {
+    display: flex;
+    flex-direction: row;
     margin: 19px 0 25px 0;
     &_woman {
       margin-left: 30px;
@@ -36,11 +55,18 @@
       }
     }
   }
+  &__wrap{
+    display: flex;
+    flex-direction: row;
+  }
   &__text {
     margin-top: 20px;
     font-size: 19px;
     margin-right: 60px;
-    margin-top: 20px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.1rem;
+    letter-spacing: 0;
   }
   &__offer {
     font-family: Montserrat;
@@ -51,7 +77,7 @@
     color: rgba(31, 32, 65, 0.75);
     margin-left: 15px;
   }
-  &__button_payment {
+  &__button{
     margin-top: 35px;
     margin-bottom: 50px;
   }
@@ -62,6 +88,11 @@
     &__container {
       padding: 15px 55px;
       text-align: center;
+    }
+    &__radio-buttons {
+      &_woman {
+        margin-left: 20px;
+      }
     }
     &__text {
       margin-top: 20px;
@@ -75,7 +106,7 @@
         width: 400px;
       }
     }
-    & .btn__confirm{
+    & .btn__confirm {
       width: 400px;
     }
   }
@@ -87,6 +118,9 @@
     &__container {
       padding: 15px 25px;
       text-align: left;
+    }
+    &__subtitle{
+      font-size: 16px;
     }
     &__input {
       width: 400px;
@@ -125,7 +159,7 @@
         width: 290px;
       }
     }
-    & .btn__confirm{
+    & .btn__confirm {
       width: 290px;
     }
   }
