--- a/src/components/form-search/form-search.pug
+++ b/src/components/form-search/form-search.pug
@@ -4,14 +4,14 @@ include ../../blocks/airdatepicker/airdatepicker.pug
 mixin form-search(title, subtitle, text)
   div(class='form-search')
     div(class='form-search__container')
-        h1(class='title-main form-search__title')= title
-        div(class='row')
-          h3(class='title form-search__title_checkin')= subtitle.checkin
-          h3(class='title form-search__title_checkout')= subtitle.checkout
+        h1(class='form-search__title')= title
+        div(class='form-search__wrap')
+          h3(class='form-search__subtitle form-search__subtitle_checkin')= subtitle.checkin
+          h3(class='form-search__subtitle form-search__subtitle_checkout')= subtitle.checkout
         div(class='form-search__datepicker')
           +datepicker()
-        h3(class='title form-search__title_guests')= subtitle.guests
+        h3(class='form-search__subtitle form-search__subtitle_guests')= subtitle.guests
         div(class='form-search__dropdown')
           +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
-        div(class='form-search__button_confirm')  
+        div(class='form-search__button')  
           +button('подобрать номер', 'filter-page.html', 'btn__confirm')
