--- a/src/components/form-search/form-search.scss
+++ b/src/components/form-search/form-search.scss
@@ -8,8 +8,28 @@
   &__container {
     padding: 6% 8% 6% 7%;
   }
+  &__wrap{
+    display: flex;
+    flex-direction: row;
+  }
   &__title {
     max-width: 400px;
+    font-family: "OpenSans-Bold";
+    font-style: normal;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 1.89rem;}
+  &__subtitle{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 17.8px;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: #1f2041;
+    letter-spacing: 0.2px;
+    margin-block-end: 0.1em;
+    margin-block-start: 0.1em;
+    margin-bottom: 5px;
     &_checkin {
       padding-top: 5px;
       padding-bottom: 10px;
@@ -26,13 +46,13 @@
   &__dropdown .dd-button {
     margin-bottom: 20px;
   }
-  &__button_confirm {
+  &__button{
     margin: 40px 0 10px;
   }
   
 }
 @media only screen and (max-width: 700px) {
-  .form-search .dropdowns .dd-button::after {
+  .form-search  .dd-button::after {
     left: 21.5em;
   }
 }
@@ -48,9 +68,6 @@
     &__dropdown .dd-button::after {
       left: 27.5em;
     }
-    & .title-main {
-      font-size: 23px;
-    }
     & .btn__confirm{
       width: 470px;
     }
@@ -63,7 +80,7 @@
     padding: 20px 10px;
     margin: 0 auto;
     &__datepicker {
-      & .datepicker__range {
+      & .date-dropdown__input {
         width: 150px;
       }
       & .dd-button {
@@ -81,7 +98,7 @@
     & > .datepicker {
       width: 280px;
     }
-    &__title_checkout {
+    &__subtitle_checkout {
       margin-left: 25%;
     }
   }
@@ -92,7 +109,7 @@
     width: 310px;
     margin-left: 0px;
     &__datepicker {
-      & .datepicker__range {
+      & .date-dropdown__input {
         width: 130px;
         height: 50px;
       }
@@ -106,7 +123,7 @@
           left: 16em;
         }
       }
-      &__title_checkout {
+      &__subtitle_checkout {
         margin-left: 20%;
       }
     }
