--- a/src/components/signin-form/signin-form.scss
+++ b/src/components/signin-form/signin-form.scss
@@ -9,6 +9,13 @@
   &__container {
     padding: 32px 30px 40px 40px;
   }
+  &__title{
+    font-family: "OpenSans-Bold";
+    font-style: normal;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 1.89rem;
+  }
   &__input {
     &_second {
       margin-top: 12px;
@@ -18,15 +25,23 @@
   }
   &__button {
     margin-top: 26px;
-    &_create {
-      margin-top: 45px;
-    }
+  }
+  &__wrapper{
+    display: flex;
+    justify-content: space-between;
   }
   &__text {
     margin-top: 65px;
     font-family: "OpenSans-Bold";
     font-size: 0;
     line-height: 18px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.1rem;
+    letter-spacing: 0;
+  }
+  &__create {
+    margin-top: 45px;
   }
 }
 
