--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -6,9 +6,9 @@ include ../../blocks/calculator/calculator.pug
 include ../../blocks/dropdown/dropdown.pug
 include ../../blocks/btn-like/btn-like.pug
 
-div(class='information')
-    div(class='information__top-part information__gallery')
-        div(class='gallery__big-img_responsive')
+div(class='room-details')
+    div(class='gallery')
+        div(class='gallery__img-responsive')
             img(src=require('./images/mainA-resp.jpg'))
         div(class='gallery__big-img')
             img(src=require('./images/mainA.jpg'))
@@ -17,9 +17,9 @@ div(class='information')
                 img(src=require('./images/gallery-first.jpg'))
             div(class='gallery__small-img_second')
                 img(src=require('./images/gallery-second.jpg'))
-    div(class=' container flex-row information__bottom-part')
-        div(class='information__bottom-part bottom-part__left')
-            div(class='information__info')
+    div(class='information')
+        div(class='information__data')
+            div(class='information__wrapper')
                 div
                     h3(class='information__title information__title_info') Сведения о номере
                     +room-information('mood', 'Комфорт', 'Шумопоглощающие стены', ' information__border') 
@@ -28,14 +28,14 @@ div(class='information')
                 div(class='information__impression')
                     h3(class='information__title information__title_impression') Впечатления от номера
                     +chart-donut('260', 'голосов', 'Великолепно', 'Хорошо', 'Удовлетворительно', 'Разочарован')
-            div
-                h3(class='information__title information__title_details') Отзывы посетителей номера
-                +feedback(require('./images/photo1.jpg'), 'Мурад Сарафанов', '5 дней назад', 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
-                    +btn-like(12)
-                div(class='information__impression_second')
-                    +feedback(require('./images/photo2.jpg'), 'Патрисия Стёклышкова', 'Неделю назад', 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент')
+                div(class='information__feedback')
+                    h3(class='information__title information__title_details') Отзывы посетителей номера
+                    +feedback(require('./images/photo1.jpg'), 'Мурад Сарафанов', '5 дней назад', 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
                         +btn-like(12)
-            div(class='flex-row')
+                    div(class='information__feedback_second')
+                        +feedback(require('./images/photo2.jpg'), 'Патрисия Стёклышкова', 'Неделю назад', 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент')
+                            +btn-like(12)
+            div(class='information__wrapper')
                 div(class='information__rules')
                     h3(class='information__title information__title_rules') Правила
                     +bullet-list(['Нельзя с питомцами', 'Без вечеринок и мероприятий', 'Время прибытия — после 13:00' + ', '   +  ' а выезд до 12:00 '])
@@ -46,6 +46,6 @@ div(class='information')
                         | этого при отмене не позднее чем за 5 дн. до 
                         | прибытия вы получите полный возврат за 
                         | вычетом сбора за услуги.
-        div(class='information__bottom-part bottom-part__right')
+        div(class='information__calculator')
             +calculator(888, '9 990₽', 'в сутки', 'прибытие', 'выезд', 'гости', '9 990₽ х 4 суток', '39 960₽', 'Сбор за услуги: скидка 2 179₽', 'Сбор за дополнительные услуги','300₽', 'Итого..................................................38 081₽', 'Забронировать')
 hr
