--- a/src/blocks/airdatepicker/airdatepicker.pug
+++ b/src/blocks/airdatepicker/airdatepicker.pug
@@ -1,5 +1,5 @@
 mixin datepicker()
-    div(class='date-dropdown flex-row')
+    div(class='date-dropdown')
         div(class='date-dropdown__range')
             input(type='text'
                 data-range='true'
