--- a/src/blocks/toggle/toggle.pug
+++ b/src/blocks/toggle/toggle.pug
@@ -1,3 +1,4 @@
 mixin toggle()
-    input#cb1.tgl.tgl_light(type ='checkbox') 
-    label.tgl__btn(for = 'cb1')
+    div(class='tgl')
+        input(id='tgl' class='tgl__input' type='checkbox') 
+        label(class='tgl__btn' for ='tgl')
