--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -30,7 +30,7 @@ mixin footer(slogan, title, linkList1, linkList2, linkList3, offer, copyright)
           p(class='footer__text')= offer
           +input-subscription('Email')
     hr(class='footer__strip')
-    div(class='footer__details container')
+    div(class='footer__details')
       div(class='footer__row')
           p(class='footer__copyright')= copyright 
           ul(class='footer__icons')
