--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,6 +1,6 @@
 mixin header(links)
   div(class='header')
-    div(class='header__container container')
+    div(class='header__container')
       div(id='logo' class='logo')
       div(class='menu')
         label(for='drop' class='menu_toggle') 
