--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -47,5 +47,5 @@ div(class='room-details')
                         | прибытия вы получите полный возврат за 
                         | вычетом сбора за услуги.
         div(class='information__calculator')
-            +calculator(888, '9 990₽', 'в сутки', 'прибытие', 'выезд', 'гости', '9 990₽ х 4 суток', '39 960₽', 'Сбор за услуги: скидка 2 179₽', 'Сбор за дополнительные услуги','300₽', 'Итого..................................................38 081₽', 'Забронировать')
+            +calculator({roomNumber: 888, pricePerDay: '9 990₽', day: 'в сутки', checkin: 'прибытие', checkout: 'выезд',  titleDropdown: 'гости', calculationOfThePrice: '9 990₽ х 4 суток', fullPrice: '39 960₽', tax: 'Сбор за услуги: скидка 2 179₽', addTax: 'Сбор за дополнительные услуги', additionalTax: '300₽', totalPrice: 'Итого..................................................38 081₽'})
 hr
