--- a/src/blocks/checkbox/checkbox.scss
+++ b/src/blocks/checkbox/checkbox.scss
@@ -43,3 +43,22 @@
   color: #bc9cff;
   border: 1.5px solid #bc9cff;
 }
+
+.checkbox__label_descr {
+  font-weight: bold;
+  margin-top: -3px;
+  font-size: 1rem;
+  letter-spacing: 1.2px;
+}
+
+.checkbox__span {
+  display: block;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1rem;
+  line-height: 18px;
+  color: rgba(31, 32, 65, 0.5);
+  margin-left: 2vw;
+  margin-top: 0.5vw;
+  margin-bottom: 1vw;
+}
