--- a/src/components/feedback/feedback.pug
+++ b/src/components/feedback/feedback.pug
@@ -1,11 +1,11 @@
 mixin feedback(imgName, personName, date, text)
   div(class='room-feedback')
-      div(class='room-feedback__person row')
+      div(class='room-feedback__person')
         img(src= imgName class="room-feedback__photo")
         div
           h4(class="room-feedback__name")= personName
           p(class="room-feedback__date")= date
-      div(class='room-feedback__evaluation row') 
+      div(class='room-feedback__evaluation') 
         div(class='room-feedback__btn-like')
           if block
             block
