--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -48,6 +48,8 @@
     padding-top: 5px;
     padding-bottom: 20px;
     justify-content: space-between;
+    width: 80.5vw;
+    margin: 0 auto;
   }
   &__copyright {
     color: #1f2041;
