--- a/src/components/room-page/room-page.pug
+++ b/src/components/room-page/room-page.pug
@@ -1,6 +1,5 @@
 include ../card-room/card-room.pug
 include ../../blocks/checkbox/checkbox.pug
-include ../../blocks/description-checkbox/description-checkbox.pug
 include ../../blocks/range-slider/range-slider.pug
 include ../../blocks/pagination/pagination.pug
 include ../../blocks/expandable-checkbox-list/expandable-checkbox-list.pug
@@ -9,52 +8,52 @@ include ../../blocks/single-airdatepicker/single-airdatepicker.pug
 include ../../blocks/stars/stars.pug
 div(class='settings')
     div(class='settings__container')
-        div(class='settings__left-side')
-            div(class='sidebar' id='sidebar')
-                a(href='#' class='close')
+        div(class='sidebar' id='sidebar')
+                a(href='#' class='sidebar__close')
                     i(class='fa fa-arrow-left')
-                h3(class='title') Даты пребывания в отеле
-                div(class='settings__datepicker')
+                h3(class='sidebar__subtitle') Даты пребывания в отеле
+                div(class='sidebar__datepicker')
                     +single-datepicker
-                h3(class='title') гости
-                div(class='settings__dropdown')
+                h3(class='sidebar__subtitle') гости
+                div(class='sidebar__dropdown')
                     +little-dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
                 .flex-row
-                    h3(class='title settings__title_price') Диапазон цены
+                    h3(class='sidebar__subtitle sidebar__subtitle_price') Диапазон цены
                     input(type='text' class='slider-range-price' id='amount')
-                div(class='settings__range')
+                div(class='sidebar__range')
                     +range-slider('Стоимость за сутки пребывания в номере')
-                h3(class='title settings__title_checkboxes') Checkbox Buttons             
-                div(class='settings__checkbox')
-                    +checkbox('Smoking', 'Можно курить', 'room__checkbox')
-                    +checkbox('Pets', 'Можно с питомцами', 'room__checkbox')
+                h3(class='sidebar__subtitle sidebar__subtitle_checkboxes') Checkbox Buttons             
+                div(class='sidebar__checkbox')
+                    +checkbox('Smoking', 'Можно курить', 'sidebar__checkbox')
+                    +checkbox('Pets', 'Можно с питомцами', 'sidebar__checkbox')
                     +checkbox('Guests',  'Можно пригласить гостей (до 10 человек)')
-                h3(class='title settings__title_availability') Доступность 
+                h3(class='sidebar__subtitle sidebar__subtitle_availability') Доступность 
                 div
-                    +description-checkbox('Широкий коридор', 'Широкий коридор', 'Ширина коридоров в номере не менее 91 см.')
-                    +description-checkbox('Помощник для инвалидов', 'Помощник для инвалидов', 'На 1 этаже вас встретит специалист  и проводит до номера.')
-                h3(class='title settings__title_comfort') Удобства номера
+                    +checkbox('Широкий коридор', 'Широкий коридор', 'checkbox', 'checkbox__label_descr')
+                        span(class='checkbox__span') Ширина коридоров в номере не менее 91 см.
+                    +checkbox('Помощник для инвалидов', 'Помощник для инвалидов',  'checkbox', 'checkbox__label_descr')
+                        span(class='checkbox__span') На 1 этаже вас встретит специалист  и проводит до номера.'
+                h3(class='sidebar__subtitle sidebar__subtitle_comfort') Удобства номера
                 +little-dropdown( {id: 'comfort-button', name: 'Удобства'}, { name:'спальни', number: 'bedroom_text', plus: 'bedroom_plus', minus: 'bedroom_minus'},  {name: 'кровати', number: 'bed_text', plus: 'bed_plus', minus: 'bed_minus' }, {name: 'ванные', number: 'bathroom_text', plus: 'bathroom_plus', minus: 'bathroom_minus'}, {id:'comfort-clean', title: 'очистить'}, {id:'comfort-apply', title: 'применить'})
-                div(class='settings-comfort')
-                div(class='settings__extracomfort')
+                div(class='sidebar__extracomfort')
                     +expandable-checkbox-list('Дополнительные удобства')
-                        ul(class='extracomfort__menu')
-                            li(class='extracomfort__checkbox')
+                        ul(class='sidebar__checkboxes')
+                            li(class='sidebar__checkbox')
                                 +checkbox('Breakfast', 'Завтрак')
-                            li(class='extracomfort__checkbox')
+                            li(class='sidebar__checkbox')
                                 +checkbox('Table', 'Письменный стол')
-                            li(class='extracomfort__checkbox')
+                            li(class='sidebar__checkbox')
                                 +checkbox('Chair', 'Стул для кормления')
-                            li(class='extracomfort__checkbox')
+                            li(class='sidebar__checkbox')
                                 +checkbox('Bed', 'Кроватка')
-                            li(class='extracomfort__checkbox')
+                            li(class='sidebar__checkbox')
                                 +checkbox('Shampoo', 'Шампунь')
-        .settings__right-side
-            h1(class='title-main settings__title-main') Номера, которые мы для вас подобрали
-            span(class='slide' id='slide')
+        div(class='rooms')
+            h1(class='rooms__title') Номера, которые мы для вас подобрали
+            span(class='rooms__slide' id='slide')
                 a(href='#')
                     i(class='fa fa-arrow-right')
-            .right-side__content
+            div(class='rooms__content')
                     +card-room('carousel', [require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg')], 888, '9  990₽', ' в сутки', 145, ' Отзывов',  'room-card__decor')
                         +stars('--rating: 5')
                     +card-room('carousel1', [require('./images/room2.jpg'), require('./images/room2.jpg'), require('./images/room2.jpg'), require('./images/room2.jpg')], 840,'9  900₽', ' в сутки', 65 , ' Отзывов', 'room-card__decor')
@@ -79,7 +78,6 @@ div(class='settings')
                         +stars('--rating: 4')
                     +card-room('carousel11', [require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg')],  352, '5 000₽', 'в сутки', 55, 'Отзывов', 'room-card__decor')
                         +stars('--rating: 3')
-            div(class='settings__pagination')
-                +pagination('arrow_back', 'arrow_forward')
-                p(class="panagination-subtitle") 1 – 12 из 100+ вариантов аренды
+            div(class='rooms__pagination')
+                +pagination('arrow_back', 'arrow_forward', '1 – 12 из 100+ вариантов аренды')
 hr
