--- a/src/components/room-page/room-page.scss
+++ b/src/components/room-page/room-page.scss
@@ -1,14 +1,27 @@
 .settings {
-  &__container{
+  &__container {
     width: 80.5vw;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
   }
-  &__left-side {
-    margin: 57px 90px 0 0;
+}
+.sidebar {
+  margin: 57px 90px 0 0;
+  &__close {
+    display: none;
   }
-  &__title {
+  &__subtitle {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 17.8px;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: #1f2041;
+    letter-spacing: 0.2px;
+    margin-block-end: 0.1em;
+    margin-block-start: 0.1em;
+    margin-bottom: 5px;
     &_price {
       padding: 45px 0 31px 0;
     }
@@ -29,9 +42,7 @@
     position: relative;
   }
   &__checkbox {
-    & .room__checkbox {
       margin-bottom: 17px;
-    }
   }
   &__datepicker {
     margin-top: 10px;
@@ -41,70 +52,59 @@
   &__extracomfort {
     margin-top: 15px;
   }
+}
+.rooms {
+  &__slide {
+    display: none;
+  }
+  &__content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    & .room-card__decor {
+      flex-basis: 400px;
+      margin-top: 4px;
+    }
+  }
   &__pagination {
     margin-bottom: 100px;
   }
-  &__right-side {
-    & .right-side__content {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      & .room-card__decor {
-        flex-basis: 400px;
-        margin-top: 4px;
-      }
-    }
-    & .fa-arrow-right {
-      font-size: 1.67rem;
-      color: #6fcf97;
-    }
-    & .fa-arrow-left {
-      font-size: 1.67rem;
-      color: #6fcf97;
-    }
+  & .fa-arrow-right {
+    font-size: 1.67rem;
+    color: #6fcf97;
   }
-  
-  & .show {
-    position: relative;
-    width: 340px;
-    z-index: 10;
-  }
-  
-  & .slide {
-    display: none;
-  }
-  
-  & .close {
-    display: none;
+  & .fa-arrow-left {
+    font-size: 1.67rem;
+    color: #6fcf97;
   }
 }
 
 @media only screen and (max-width: 1600px) {
-  .settings__title-main {
+  .rooms__title {
     text-align: center;
   }
 }
 
 @media only screen and (max-width: 1000px) {
-  .settings__left-side {
+  .sidebar {
     margin-right: 10px;
   }
 }
-@media only screen and (max-width: 750px) {
-  .settings {
-    &__right-side {
+@media only screen and (max-width: 800px) {
+  .rooms {
       display: none;
+      &__slide {
+        display: block;
+      }
     }
-    & .slide {
-      display: block;
-    }
-    & .close {
+  .sidebar{
+    &__close {
       display: block;
     }
   }
 }
 @media only screen and (max-width: 400px) {
-  .settings {
+  .sidebar {
     &__datepicker {
       & #single-range {
         width: 300px;
@@ -118,10 +118,12 @@
     &__range #slider-range {
       width: 300px;
     }
-    & .slide {
+    &__close {
       display: block;
     }
-    & .close {
+  }
+  .rooms{
+    &__slide {
       display: block;
     }
     & .slider-range-price {
