fix BEM for the pages

--- a/src/blocks/expandable-checkbox-list/expandable-checkbox-list.pug
+++ b/src/blocks/expandable-checkbox-list/expandable-checkbox-list.pug
@@ -1,6 +1,6 @@
 mixin expandable-checkbox-list(title)
     label(class='extracomfort')
-        div(class='title' id='extracomfort__button')= title
+        div(class='extracomfort__button' id='extracomfort__button')= title
         input(type='checkbox' class='extracomfort__input' id='extracomfort__input')
         if block 
             block
