--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,6 +8,7 @@
     margin-top: 100px;
     width: 80.5vw;
     margin: 0 auto;
+    padding-top: 100px;
   }
   &__column {
     margin: 0 10px 10px;
