--- a/src/components/room-page/room-page.scss
+++ b/src/components/room-page/room-page.scss
@@ -41,6 +41,9 @@
   &__range {
     position: relative;
   }
+  &__checkboxes{
+    padding-left: 0;
+  }
   &__checkbox {
       margin-bottom: 17px;
   }
