--- a/src/blocks/expandable-checkbox-list/expandable-checkbox-list.scss
+++ b/src/blocks/expandable-checkbox-list/expandable-checkbox-list.scss
@@ -2,6 +2,12 @@
   display: inline-block;
   position: relative;
   &__button {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 17.8px;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: #1f2041;
     &::after {
       content: "";
       padding: 5px;
@@ -34,7 +40,7 @@
     z-index: 10;
     width: 395px;
   }
-  &__checkbox{
+  &__checkbox {
     padding-bottom: 15px;
   }
 }
