--- a/src/pages/navigation-page/navigation-page.pug
+++ b/src/pages/navigation-page/navigation-page.pug
@@ -1,14 +1,15 @@
-a(href='signup-page.html')
-    button(class='navigation__link') Registration Page
+div(class='navigation')
+    a(href='signup-page.html')
+        button(class='navigation__link') Registration Page
 
-a(href='signin-page.html')
-    button(class='navigation__link') Signin Page
+    a(href='signin-page.html')
+        button(class='navigation__link') Signin Page
 
-a(href='search-page.html')
-    button(class='navigation__link') Search Page
+    a(href='search-page.html')
+        button(class='navigation__link') Search Page
 
-a(href='filter-page.html')
-    button(class='navigation__link') Filter Page
+    a(href='filter-page.html')
+        button(class='navigation__link') Filter Page
 
-a(href='info-page.html')
-    button(class='navigation__link') Info Page
+    a(href='info-page.html')
+        button(class='navigation__link') Info Page
