--- a/src/pages/search-page/search-page.scss
+++ b/src/pages/search-page/search-page.scss
@@ -1,42 +1,44 @@
-.search__background {
-  width: 100%;
-  max-height: 1300px;
-  background-image: url(../../components/images/image.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-top: 100px;
-  padding-left: 192px;
-}
+.search-page {
+  &__background {
+    width: 100%;
+    max-height: 1300px;
+    background-image: url(../../components/images/image.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 100px;
+    padding-left: 192px;
+  }
 
-.slogan {
-  position: relative;
-  font-size: 1.1rem;
-  left: 70%;
-  margin-top: 50vh;
-  padding-bottom: 3vh;
-  color: rgba(31, 32, 65, 0.75);
+  &__slogan {
+    position: relative;
+    font-size: 1.1rem;
+    left: 70%;
+    margin-top: 50vh;
+    padding-bottom: 3vh;
+    color: rgba(31, 32, 65, 0.75);
+  }
 }
-
 @media only screen and (max-width: 1500px) {
-  .slogan {
+  .search-page__slogan {
     left: 50%;
   }
-} 
-
-@media only screen and (max-width: 900px) {
-  .search__background {
-    padding-top: 20px;
-    padding-left: 10px;
-    padding-bottom: 20px;
-  }
-
-  .slogan {
-    display: none;
-  }
 }
 
+@media only screen and (max-width: 900px) {
+  .search-page {
+    &__background {
+      padding-top: 20px;
+      padding-left: 10px;
+      padding-bottom: 20px;
+    }
+
+    &__slogan {
+      display: none;
+    }
+  }
+}
 @media only screen and (max-width: 400px) {
-  .search__background {
+  .search-page__background {
     padding-top: 20px;
     padding-left: 5px;
     padding-bottom: 20px;
