--- a/src/pages/signin-page/signin-page.pug
+++ b/src/pages/signin-page/signin-page.pug
@@ -8,10 +8,11 @@ html
     title
     meta(name="viewport", content="width=, initial-scale=1.0")
   body
-    +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
-      +button('Войти', 'signin-page.html', 'btn__signin_header')
-      +button('Зарегистрироватьcя', 'signup-page.html', 'btn__signup')
-    .signin__background
-      +form-signin('Войти', 'Нет аккаунта на Toxin?')
-    +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 
-    'Получайте специальные предложения и новости сервиса', 'Copyright © 2018 Toxin отель. Все права зачищены.')
+    div(class='signin-page')
+      +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
+        +button('Войти', 'signin-page.html', 'btn__signin_header')
+        +button('Зарегистрироватьcя', 'signup-page.html', 'btn__signup')
+      div(class='signin-page__background')
+        +form-signin('Войти', 'Нет аккаунта на Toxin?')
+      +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 
+      'Получайте специальные предложения и новости сервиса', 'Copyright © 2018 Toxin отель. Все права зачищены.')
