--- a/src/pages/signin-page/signin-page.scss
+++ b/src/pages/signin-page/signin-page.scss
@@ -1,4 +1,4 @@
-.signin__background {
+.signin-page__background {
   min-height: 1010px;
   background-image: url(../../images/bg_in.jpg);
   background-repeat: no-repeat;
@@ -9,7 +9,7 @@
 }
 
 @media only screen and (max-width: 500px) {
-  .signin__background {
+  .signin-page__background {
     min-height: 600px;
     padding-top: 40px;
   }
