--- a/src/blocks/calculator/calculator.pug
+++ b/src/blocks/calculator/calculator.pug
@@ -16,12 +16,11 @@ mixin calculator(calculator)
             p(class='calculator__subtitle')= calculator.titleDropdown
             div(class='calculator__dropdown')
                 +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
-            div(class='calculator__price')
-                div(class='calculator__count')
-                    div
-                        p(class='calculator__text')= calculator.calculationOfThePrice
-                    div
-                        p(class='calculator__text')= calculator.fullPrice
+            div(class='calculator__price calculator__price_count')
+                div
+                    p(class='calculator__text')= calculator.calculationOfThePrice
+                div
+                    p(class='calculator__text')= calculator.fullPrice
             div(class='calculator__price')
                 div(class='calculator__wrap')
                     p(class='calculator__text')= calculator.tax
@@ -30,7 +29,7 @@ mixin calculator(calculator)
                 p(class='calculator__text') 0P
             div(class='calculator__price')
                 div(class='calculator__wrap')
-                    p(class='calculator__text')= calculator.addTax
+                    p(class='calculator__text calculator__text_tax')= calculator.addTax
                     div
                         span(class='calculator__info calculator__info_extra') i
                 p(class='calculator__text')= calculator.additionalTax
