--- a/src/blocks/donut-chart/donut-chart.scss
+++ b/src/blocks/donut-chart/donut-chart.scss
@@ -1,109 +1,56 @@
-.donut svg {
+.donut-chart {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.svg {
   width: 205px;
   height: 250px;
   margin-top: 7px;
   margin-left: 7px;
-  margin-right: 15px;
-}
-.circle {
-  cx: 85px;
-  cy: 85px;
-  r: 75px;
-  fill: #fff;
-  stroke: #fff;
-  stroke-width: 7px;
-}
-.circle1 {
-  cx: 85px;
-  cy: 85px;
-  r: 75px;
-  fill: #fff;
-  stroke: #ffba9c;
-  stroke-width: 5px;
-  stroke-dasharray: 230px;
-  stroke-dashoffset: 340px;
-}
 
-.circle2 {
-  cx: 84px;
-  cy: 84px;
-  r: 75px;
-  fill: transparent;
-  stroke: #6fcf97;
-  stroke-width: 5px;
-  stroke-dasharray: 240px;
-  stroke-dashoffset: 485px;
-  transform: rotate(-90deg) translateX(-169px);
-}
-
-.circle3 {
-  cx: 84px;
-  cy: 84px;
-  r: 75px;
-  fill: transparent;
-  stroke: #9ba1fb;
-  stroke-width: 10px;
-  stroke-dasharray: 450px;
-  stroke-dashoffset: 330px;
-  transform: rotate(-90deg) translateX(-171px);
-}
-
-.figure-key {
-  margin-top: 65px;
-  &__list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    & .list__grade {
-      margin: 0 0 9px;
-      padding: 0;
-      font-size: 34px;
-    }
+  &__circle {
+    cx: 85px;
+    cy: 85px;
+    r: 75px;
+    fill: #fff;
+    stroke: #fff;
+    stroke-width: 7px;
   }
-}
-// .figure-key__list {
-//   margin: 0;
-//   padding: 0;
-//   list-style: none;
-// }
-// .list__grade {
-//   margin: 0 0 9px;
-//   padding: 0;
-//   font-size: 19px;
-// }
-.shape-circle {
-  display: inline-block;
-  vertical-align: middle;
-  width: 15px;
-  height: 15px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-}
-.shape-fuschia {
-  background: linear-gradient(180deg, #ffe39c 0%, #ffba9c 100%);
-}
-.shape-lemon-lime {
-  background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
-}
-.shape-blue {
-  background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-}
-.shape-grey {
-  background: linear-gradient(180deg, #919191 0%, #3d4975 100%);
-}
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-}
+  &__circle1 {
+    cx: 85px;
+    cy: 85px;
+    r: 75px;
+    fill: #fff;
+    stroke: #ffba9c;
+    stroke-width: 5px;
+    stroke-dasharray: 230px;
+    stroke-dashoffset: 340px;
+  }
 
-.chart {
+  &__circle2 {
+    cx: 84px;
+    cy: 84px;
+    r: 75px;
+    fill: transparent;
+    stroke: #6fcf97;
+    stroke-width: 5px;
+    stroke-dasharray: 240px;
+    stroke-dashoffset: 485px;
+    transform: rotate(-90deg) translateX(-169px);
+  }
+
+  &__circle3 {
+    cx: 84px;
+    cy: 84px;
+    r: 75px;
+    fill: transparent;
+    stroke: #9ba1fb;
+    stroke-width: 10px;
+    stroke-dasharray: 450px;
+    stroke-dashoffset: 330px;
+    transform: rotate(-90deg) translateX(-171px);
+  }
   &__text {
     fill: #8ba4f9;
     -moz-transform: translateY(0.25em);
@@ -112,8 +59,8 @@
     transform: translateY(0.25em);
   }
   &__number {
-    font-size: 2em;
-    line-height: 1;
+    font-size: 24px;
+    font-weight: bold;
     text-anchor: middle;
     -moz-transform: translateY(-0.25em);
     -ms-transform: translateY(-0.25em);
@@ -121,7 +68,7 @@
     transform: translateY(-0.25em);
   }
   &__label {
-    font-size: 1.5em;
+    font-size: 20px;
     text-transform: uppercase;
     text-anchor: middle;
     -moz-transform: translateY(0.7em);
@@ -129,4 +76,54 @@
     -webkit-transform: translateY(0.7em);
     transform: translateY(0.7em);
   }
+}
+.chart-label {
+  margin-top: 65px;
+  &__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  &__grade {
+    margin: 0 0 9px;
+    padding: 0;
+    font-size: 20px;
+    margin-left: 10px;
+    color: rgba(31, 32, 65, 0.75);
+    margin-left: 15px;
+    font-style: normal;
+    font-size: 1.14rem;
+    font-weight: 300;
+  }
+}
+
+.chart-label {
+  &__circle {
+    display: inline-block;
+    vertical-align: middle;
+    width: 15px;
+    height: 15px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    margin-right: 10px;
+    &_peach {
+      background: linear-gradient(180deg, #ffe39c 0%, #ffba9c 100%);
+    }
+    &_green {
+      background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
+    }
+    &_blue {
+      background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+    }
+    &_grey {
+      background: linear-gradient(180deg, #919191 0%, #3d4975 100%);
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .chart-label {
+    margin-top: 0px;
+}
 }
