--- a/src/blocks/input-subscription/input-subscription.scss
+++ b/src/blocks/input-subscription/input-subscription.scss
@@ -4,16 +4,16 @@
   &__input {
     padding: 24px;
     border: 1px solid grey;
-    float: left;
-    width: 80%;
-    background: #f1f1f1;
+    width: 395px;
+    height: 65px;
     box-sizing: border-box;
-    background: #ffffff;
+    background-image: url('./images/arrow_forward.svg');
+    background-repeat: no-repeat;
+    background-position-x: 93%;
+    background-position-y: 50%;
     border:  1.5px solid rgba(31, 32, 65, 0.25);
+    border-radius: 4px;
     box-sizing: border-box;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    border-right: none;
     &::placeholder {
       font-style: normal;
       font-weight: normal;
@@ -29,35 +29,13 @@
       }
     }
   }
-  &__button {
-    float: left;
-    width: 20%;
-    padding: 17.5px;
-    background: #fff;
-    color: #bc9cff;
-    font-size: 24px;
-    border:  1.5px solid rgba(31, 32, 65, 0.25);
-    border-left: none;
-    cursor: pointer;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    &:hover {
-      color: #bc9cff;
-      opacity: 0.7;
-    }
-    &:focus {
-      outline: none;
-    }
-    &::after {
-      content: "";
-      clear: both;
-      display: table;
-    }
-  }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
   .form-subscribe {
     width: 300px;
+    &__input{
+      width: 300px;
+    }
   }
 }
