--- a/src/blocks/little-dropdown/little-dropdown.scss
+++ b/src/blocks/little-dropdown/little-dropdown.scss
@@ -69,7 +69,7 @@
   }
 
   &__text {
-    margin: 7px 30px 0 30px;
+    margin: 13px 30px 0 30px;
   }
   &__title {
     margin-top: 15px;
@@ -122,6 +122,9 @@
 
 @media only screen and (max-width: 380px) {
   .little-dd {
+    &__item{
+      width: 300px;
+    }
     &__menu {
       width: 300px;
     }
