--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -16,8 +16,7 @@
   }
   &__number {
     font-style: normal;
-    font-family: "Montserrat";
-    font-weight: bold;
+    font-family: "OpenSans-Bold";
     font-size: 1.3rem;
     margin-top: 5px;
     color: #1F2041;
