--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,10 +1,10 @@
 include ../../blocks/input-subscription/input-subscription.pug
-
+include ../logo/logo.pug
 mixin footer(slogan, title, linkList1, linkList2, linkList3, offer, copyright)
   footer(class='footer')
     div(class='footer__container')
         div(class='footer__column footer__column_slogan')
-          div(class='footer__logo logo')
+          +logo
           div
             p(class='footer__slogan')= slogan
         div(class='footer__column')
