--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -47,10 +47,13 @@
   }
   &__details {
     padding-top: 5px;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     justify-content: space-between;
     width: 80.5vw;
     margin: 0 auto;
+    & .svg-inline--fa{
+      font-size: 38px;
+    }
   }
   &__copyright {
     color: #1f2041;
