--- a/src/components/info-room/info-room.scss
+++ b/src/components/info-room/info-room.scss
@@ -20,7 +20,7 @@
   padding-top: 70px;
   display: flex;
   flex-wrap: wrap;
-  width: 80.5vw;
+  width: 82.5vw;
   margin: 0 auto;
   justify-content: space-between;
   &__data {
@@ -34,6 +34,7 @@
     font-size: 1.5rem;
     font-weight: bold;
     margin-left: 15px;
+    margin-top: 0;
     &_info {
       margin-bottom: 21px;
     }
